web/static/css/_ncd.scss
/* ... */
.sidebar.pinned {
  width: 24.9vw;
  .wizard {
    margin-top: 0px;
  }
}


// ------- Questionnaires ----------

.questionnaire-modes {
  .row > .col {
    padding-left: 0;
    padding-right: 0;
  }
  i {
    margin-right: 10px;
  }
  .mode-label {
    @extend .truncate;
    display: inline-block;
    vertical-align: middle;
  }
  .switch.right {
    @include transform(scale(0.85));
    margin-right: -20px;
  }
}

.step-mode {
  position: relative;

  .dropdown-button {
    @extend .black-text;
  }
  i.right {
    @extend .grey-text, .lighten-1;
    margin: 0;
  }
  .dropdown-content.active {
    @extend .z-depth-4;
    border-radius: 4px;
    top: -20px !important;
    left: -8px !important;
    min-width: 220px;
    i {
      min-width: 22px;
      &.right {
        @extend .black-text;
      }
    }
    > li > a {
      @extend .black-text;
    }
  }
  &.underlined {
    border-bottom: 1px solid color('grey','lighten-2');
    display: inline-block;
    padding-bottom: 5px;
    span {
      i {
        vertical-align: text-bottom;
      }
    }
  }
}

.collapsible {
  @include transition(all ease-in-out .25s);
  li {
    border-bottom: 1px solid color("grey", "lighten-2");
    .card {
      @extend .z-depth-0;
      margin: 0;
      border-radius: 0;
      .card-content.closed-step {
        padding: 0;
        a {
          @extend .black-text;
          @extend .clearfix;
          font-size: 20px;
          display: block;
          padding: 25px 20px;
          i {
            padding-top: 4px;
          }
          span {
            @extend .truncate;
            width: 83%;
            float: left;
          }
        }
      }
    }
    &:first-child .card {
      border-radius: 3px 3px 0 0;
    }
    &:last-child {
      border-bottom: none;
      .card {
        border-radius: 0 0 3px 3px;
      }
    }
  }
  &.dark {
    border: none;
    li .card {
      border-radius: 3px;
      @extend .grey;
      .card-content.closed-step {
        a, i {
          @extend .white-text;
        }
      }
    }
  }
}

.collection-item.header {
  padding: 25px 15px 25px 9px;
  height: 80px;
  .material-icons.prefix {
    @extend .grey-text, .lighten-2;
    font-size: 1.6rem;
    top: 1.8rem;
  }
  input[type=text] {
    font-size: 20px;
    border-bottom: none;
    width: 78%;
    margin-bottom: 0px;
    margin-top: -10px;
    margin-left: 15px;
  }
  .collapse {
    @extend .grey-text, .lighten-2;
    margin-right: -10px;
  }
  .dropdown-content li a, .dropdown-button {
    @extend .black-text;
  }
  .row , input {
    margin-bottom: 0;
  }
  a.page-title {
    @extend .black-text;
    font-size: 20px;
    line-height: 1.35;
    max-width: 80%;
    margin-left: 15px;
    float: left;
    i {
      @extend .grey-text, .lighten-2;
      font-size: 24px;
      display: inline-block;
      vertical-align: top;
      margin-left: 15px;
    }
  }
}


.sms-attempts, .ivr-attempts {
  li {
    display: inline-block;
    vertical-align: text-top;
    margin-right: 15px;
    position: relative;
    span {
      @extend .grey-text, .lighten-2;
      font-size: 12px;
      display: inline-block;
      padding: 0 15px 0 12px;
      vertical-align: bottom;
      border-top: 1px solid color('grey', 'lighten-2');
      position: relative;
      &:after {
        content: 'keyboard_arrow_right';
        font-family: 'Material Icons';
        font-weight: normal;
        font-style: normal;
        font-size: 11px;
        line-height: 1.158;
        letter-spacing: normal;
        text-transform: none;
        text-rendering: optimizeLegibility;
        font-feature-settings: 'liga';
        position: absolute;
        top: -6px;
        right: -6px;
        opacity: 0.4;
      }
    }
    &:after {
      @extend .black-text;
      font-family: 'Material Icons';
      font-weight: normal;
      font-style: normal;
      font-size: 24px;
      line-height: 1;
      letter-spacing: normal;
      text-transform: none;
      text-rendering: optimizeLegibility;
      font-feature-settings: 'liga';
      margin-left: 10px;
    }
    &:first-child {
      i {
        margin-right: 10px;
      }
      &:after {
        display: none;
      }
    }
  }
}

.sms-attempts {
  li {
    &:after {
      content: 'sms';
    }
  }
}

.ivr-attempts {
  li {
    &:after {
      content: 'phone';
    }
  }
}

.audio-section {
  position: relative;
  padding-left: 10px;
  .audio-dropdown {
    display: inline-block;
    width: 25%;
    min-width: 145px;
  }
  .upload-audio {
    padding-top: 20px;
  }
  audio {
    position: absolute;
    right: 5px;
    top: 0px;
    width: 74%;
  }
}

.btn-icon-grey {
  @extend .grey-text;
  font-size: 17px;
  display: inline-block;
  margin-left: 10px;
  cursor: pointer;
  span {
    vertical-align: middle;
  }
  i {
    font-size: 28px;
    vertical-align: middle;
  }
}

.collection.dark {
  border: none;
  border-radius: 3px;
  .collection-item {
    @extend .grey;
    &.header {
      border-radius: 3px 3px 0 0;
      a.page-title {
        @extend .white-text;
      }
    }
    label, * {
      @extend .white-text;
    }
    input[type='text'] {
      @extend .white-text;
      border-bottom-color: color('grey', 'lighten-1')!important;
      box-shadow: none !important;
    }
  }
}
/* ... */

